<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/tvWelcom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/verify_phone"
        android:layout_centerHorizontal="true"
        android:fontFamily="@font/poppins_semibold"
        android:layout_marginTop="@dimen/_16sdp"
        android:textColor="?colorPrimary"
        android:textSize="@dimen/_18ssp"
        android:gravity="center"/>

    <TextView android:id="@+id/tvEnterCode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/verify_msg"
        android:fontFamily="@font/poppins"
        android:layout_below="@id/tvWelcom"
        android:layout_marginTop="@dimen/_16sdp"
        android:layout_marginHorizontal="@dimen/_16sdp"
        />

    <com.mukesh.OtpView
        android:id="@+id/otp_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvEnterCode"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/_32sdp"
        android:inputType="number"
        android:itemBackground="@color/mobile_edit_text"
        android:textColor="@android:color/white"
        app:OtpItemCount="6"
        app:OtpItemSpacing="@dimen/_8sdp"
        app:OtpLineColor="@color/mobile_edit_text"
        app:OtpViewType="rectangle" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnVerify"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:text="@string/verify"
        app:cornerRadius="@dimen/_24sdp"
        android:layout_marginBottom="@dimen/_16sdp"
        android:layout_marginHorizontal="@dimen/_16sdp"
        android:paddingVertical="@dimen/_12sdp"
        />



</RelativeLayout>