<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.PhoneActivity">

    <TextView
        android:id="@+id/tvWelcom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome_to_the_covid_tracker_2020"
        android:fontFamily="@font/poppins_semibold"
        android:textColor="?colorPrimary"
        android:textSize="@dimen/_18ssp"
        android:gravity="center"
        app:layout_constraintVertical_bias=".15"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/ivLogo"
        android:layout_width="@dimen/_180sdp"
        android:layout_height="@dimen/_180sdp"
        android:src="@drawable/logo"
        android:layout_marginTop="@dimen/_32sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvWelcom" />

    <TextView
        android:id="@+id/enterPhone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enter_your_phone_no"
        android:textColor="@color/black"
        android:textSize="@dimen/_14ssp"
        android:layout_marginTop="@dimen/_16sdp"
        android:layout_marginStart="@dimen/_16sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ivLogo" />

    <TextView android:id="@+id/tvCountryCode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="+91"
        android:fontFamily="@font/poppins"
        android:textColor="@color/black"
        android:padding="@dimen/_16sdp"
        android:background="@drawable/border_bg"
        android:layout_marginTop="@dimen/_16sdp"
        app:layout_constraintStart_toStartOf="@id/enterPhone"
        app:layout_constraintTop_toBottomOf="@id/enterPhone"
        />
    <EditText android:id="@+id/etPhone"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:hint="@string/phone_number"
        android:fontFamily="@font/poppins"
        android:textColor="@color/black"
        android:paddingStart="@dimen/_4sdp"
        android:maxLength="10"
        android:inputType="phone"
        android:background="@drawable/border_bg"
        android:layout_marginStart="@dimen/_8sdp"
        app:layout_constraintStart_toEndOf="@id/tvCountryCode"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="@dimen/_16sdp"
        app:layout_constraintTop_toTopOf="@id/tvCountryCode"
        app:layout_constraintBottom_toBottomOf="@id/tvCountryCode"
        />

    <com.google.android.material.button.MaterialButton android:id="@+id/btnNext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:text="@string/next"
        app:cornerRadius="@dimen/_24sdp"
        android:layout_marginTop="@dimen/_32sdp"
        android:layout_marginHorizontal="@dimen/_16sdp"
        android:paddingVertical="@dimen/_12sdp"
        app:layout_constraintTop_toBottomOf="@id/etPhone"
        />




</androidx.constraintlayout.widget.ConstraintLayout>